# shellbird

./: Cargo.toml  Makefile  README.md  README.txt  genres.txt  layout.hjson  layout.json  sbrc
src/: color.rs  command_line.rs  event.rs  layout_config.rs  lib.rs  main.rs  mode.rs  playlist.rs  screen.rs  signals.rs  styles.rs  tagger.rs
src/command_line/: command.rs  mod.rs
src/components/: align.rs  empty_space.rs  error_box.rs  mod.rs  place_holder.rs  tag_display.rs  tag_editor.rs  title_display.rs
src/components/align/: mod.rs
src/components/menu/: mod.rs  playlist_menu.rs  queue.rs  style_menu.rs  tag_menu.rs  track_menu.rs
src/components/splitters/: mod.rs
src/components/splitters/vector_splitter/: horizontal_splitter.rs  mod.rs  vertical_splitter.rs
src/event/: app_event.rs  bindable_event.rs  command_line_event.rs  component_event.rs  mod.rs  mpd_event.rs  nestable_event.rs  screen_event.rs  tagger_event.rs
src/event/nestable_event/: bindable_event.rs  confirmable_event.rs  mod.rs
src/layout_config/: mod.rs  tests.rs
src/music/: mod.rs  mpd_listener.rs  mpd_sender.rs
