[package]
name = "shellbird"
version = "0.1.0"
authors = ["Sean DiGirolamo <s.digirolamo218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "*"
termion = "*"
signal-hook = "*"
clap-v3 = "3.0.0-beta.1"
