[package]
name = "shellbird"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = ["Sean DiGirolamo <s.digirolamo218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "*"
termion = "*"
signal-hook = "*"
clap-v3 = "3.0.0-beta.1"
home = "0.5.3"
json = "0.12.4"
unicode-width = "0.1.9"
unicode-truncate = "0.2.0"
lazy_static = "1.4.0"
itertools = "0.10.3"
id3 = "1.0.2"
shellexpand = "2.1.0"
